# python-template

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: run-tests.yml
