[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.ruff]
line-length = 79
lint.select = [
    "E",
    "W",
    "I",
    "N",
    "F",
    "B",
    "PT",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "ERA",
    "PD",
]
lint.unfixable = ["E501"]

[pytest]
testpaths = ["tests"]
