[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
requires-python = ">={{cookiecutter.python_version}}"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.ruff]
line-length = 79
lint.select = [
    "E",
    "W",
    "I",
    "N",
    "F",
    "B",
    "PT",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "ERA",
    "PD",
]
lint.unfixable = ["E501"]

[pytest]
testpaths = ["tests"]
